--- a/Sistema de asistencia/Sistema de asistencia.csproj
+++ b/Sistema de asistencia/Sistema de asistencia.csproj
@@ -47,9 +47,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Datos\Conecxion.cs" />
+    <Compile Include="Datos\DatosAsistencias.cs" />
     <Compile Include="Datos\DatosPersonal.cs" />
     <Compile Include="Datos\DCargos.cs" />
     <Compile Include="Logica\Bases.cs" />
+    <Compile Include="Logica\LogicaAsistencias.cs" />
     <Compile Include="Logica\LogicaCargos.cs" />
     <Compile Include="Logica\LogicaPersonal.cs" />
     <Compile Include="Presentacion\MenuPrincipal.cs">
@@ -64,6 +66,12 @@
     <Compile Include="Presentacion\Personal.Designer.cs">
       <DependentUpon>Personal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Presentacion\TomarAsistencias.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Presentacion\TomarAsistencias.Designer.cs">
+      <DependentUpon>TomarAsistencias.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Presentacion\MenuPrincipal.resx">
@@ -71,6 +79,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Presentacion\Personal.resx">
       <DependentUpon>Personal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Presentacion\TomarAsistencias.resx">
+      <DependentUpon>TomarAsistencias.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -133,6 +144,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\cerca.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\azul.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Rojo.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\rosa.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
