--- a/Sistema de asistencia.csproj
+++ b/Sistema de asistencia.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6BFE4595-9CDD-4719-88E1-E9003790DDBE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ORUSCURSO</RootNamespace>
-    <AssemblyName>ORUSCURSO</AssemblyName>
+    <RootNamespace>Sistema_de_asistencia</RootNamespace>
+    <AssemblyName>Sistema_de_asistencia</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
